# pocketbook_free

./: .gitmodules  README
antiword/: CMakeLists.txt
antiword/src/: 12.htm  Readme.txt  akun1.doc  akun1.html  datalist.c  debug.h  dib2eps.c  finddata.c  fontinfo.h  gc.doc  imgexam.c  imgtrans.c  jpeg2eps.c  jpeg2sprt.c  main_u.c  makearm.bat  makeemu.bat  options.c  pdf.c  pictlist.c  png2eps.c  prop0.c  prop2.c  prop6.c  prop8.c  word2text.c  wordole.c  wordtypes.h  wordwin.c  xml.c
antiword/src/DOS-only/: 00README.TXT  dos.c  getopt.c
antiword/src/NW-only/: README.TXT  nw_os.h
antiword/src/RiscOS-only/: !Boot  !Help  !MakeAll  !Run  !Sprites  !Sprites22  Templates
antiword/src/Unix-only/: fontinfo.pl
browser/atk-1.28.0/: MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  build.sh  config.h.in  confignbuild.sh  configure  configure.in  fxn_confignbuild.sh
browser/atk-1.28.0/atk/: Makefile.am  Makefile.in  atk-enum-types.c  atk.symbols  atkaction.c  atkcomponent.c  atkdocument.c  atkgobjectaccessible.c  atkhyperlink.c  atkhyperlinkimpl.c  atkhypertext.c  atkimage.c  atkmarshal.c  atkmarshal.h  atkmarshal.list  atknoopobject.c  atkobject.c  atkobjectfactory.c  atkregistry.c  atkrelation.c  atkrelationset.c  atkselection.c  atkstate.c  atkstateset.c  atkstreamablecontent.c  atktable.c  atktext.c  atkutil.c
browser/atk-1.28.0/docs/: Makefile.am  Makefile.in  atk-docs.sgml  atk-sections.txt
browser/atk-1.28.0/docs/html/: AtkAction.html  AtkComponent.html  AtkDocument.html  AtkEditableText.html  AtkGObjectAccessible.html  AtkHyperlink.html  AtkHypertext.html  AtkImage.html  AtkNoOpObject.html  AtkNoOpObjectFactory.html  AtkObject.html  AtkObjectFactory.html  AtkRegistry.html  AtkRelation.html  AtkRelationSet.html  AtkSelection.html  AtkStateSet.html  AtkStreamableContent.html  AtkTable.html  AtkText.html  AtkUtil.html  AtkValue.html  atk-AtkHyperlinkImpl.html  atk-AtkState.html  atk.devhelp  atk.devhelp2  atk.html  index.html  index.sgml  ix01.html  ix02.html  (+5 more)
browser/atk-1.28.0/po/: LINGUAS  af.po  am.po  ar.po  as.po  atk10.pot  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  (+51 more)
browser/atk-1.28.0/tests/: Makefile.in  testrelation.c  teststateset.c
browser/gail-1.18.0/: AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  confignbuild.sh  configure  configure.in  fxn_confignbuild.sh  gail-uninstalled.pc.in  gail-zip.in  gail.pc.in
browser/gail-1.18.0/docs/: Makefile.am  Makefile.in
browser/gail-1.18.0/gail/: Makefile.am  Makefile.in  gail.c  gail.h  gailcanvas.c  gailcanvas.h  gailcanvasgroup.c  gailcanvasgroup.h  gailcanvasgroupfactory.h  gailcanvasitem.c  gailcanvasitem.h  gailcanvasitemfactory.c  gailcanvasitemfactory.h  gailcanvastext.c  gailcanvastext.h  gailcanvastextfactory.c  gailcanvastextfactory.h  gailcanvaswidget.c  gailcanvaswidget.h  gailcanvaswidgetfactory.c  gailcanvaswidgetfactory.h  gailcombobox.c  gailcombobox.h  gailentry.c  gailentry.h  gailimage.c  gaillabel.c  gailrange.c  gailrange.h  gailrenderercellfactory.c  gailstatusbar.c  gailsubmenuitem.c  gailtreeview.c  gailutil.c  gailwidget.c  gailwindow.c
browser/gail-1.18.0/libgail-util/: Makefile.am  Makefile.in
browser/gail-1.18.0/po/: ChangeLog  POTFILES.in  ar.gmo  ar.po  as.gmo  as.po  az.gmo  az.po  be.gmo  be.po  be@latin.gmo  be@latin.po  bg.gmo  bg.po  bn.gmo  bn.po  bn_IN.gmo  bn_IN.po  bs.gmo  bs.po  ca.gmo  ca.po  cs.gmo  cs.po  cy.gmo  cy.po  da.gmo  da.po  de.gmo  de.po  dz.gmo  dz.po  el.gmo  el.po  en_CA.gmo  en_CA.po  en_GB.gmo  en_GB.po  es.gmo  es.po  (+111 more)
browser/gail-1.18.0/tests/: Makefile.am  Makefile.in  testlib.c  testtable.c  testtextlib.c
djviewer/djviewer/: CMakeLists.txt  makearm.sh  makepc.sh
djviewer/djviewer/libdjvu/: config.h
djviewer/djviewer/src/: TOC.cpp  bookmark.cpp  content.cpp  main.cpp  main.h  note.cpp  pbmainframe.cpp  pbmainframe.h  pbtouchzoomdlg.cpp  pbtouchzoomdlg.h  settings.h  zoomer.cpp  zoomer.h  zoomer_strategies.h
mpd/: CMakeLists.txt  makearm.bat
mpd/src/: bstdfile.c  bstdfile.h  madlld.c  madlld.h
openobex-1.5/: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  openobex-glib.pc.in  openobex.pc.in
openobex-1.5/CMakeModules/: FindBluetooth.cmake  FindGlib.cmake  FindIrda.cmake  FindLibUSB.cmake
openobex-1.5/apps/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  irobex_palm3.c  irxfer.c  obex_io.c  obex_io.h  obex_put_common.c  obex_put_common.h  obex_tcp.c  obex_test.c  obex_test.h  obex_test_cable.c  obex_test_cable.h  obex_test_client.c  obex_test_client.h  obex_test_server.c  obex_test_server.h
openobex-1.5/doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile.am  Makefile.in  openobex.coverpage
openobex-1.5/glib/: CMakeLists.txt  Makefile.am  Makefile.in  obex-client.c  obex-client.h  obex-debug.h  obex-error.c  obex-error.h  obex-lowlevel.c  obex-lowlevel.h  test-client.c  test-lowlevel.c
openobex-1.5/include/: Makefile.am  Makefile.in
openobex-1.5/include/msvc/: unistd.h
openobex-1.5/include/openobex/: Makefile.am  Makefile.in
openobex-1.5/ircp/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  debug.h  dirtraverse.c  dirtraverse.h  ircp.c  ircp.h  ircp_client.c  ircp_client.h  ircp_io.c  ircp_io.h  ircp_server.c  ircp_server.h
openobex-1.5/lib/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  bluez_compat.h  btobex.c  btobex.h  databuffer.c  databuffer.h  inobex.c  inobex.h  irda.h  irda_wrap.h  irobex.c  irobex.h  obex.c  obex.sym  obex_client.c  obex_client.h  obex_connect.c  obex_connect.h  obex_header.c  obex_header.h  obex_main.c  obex_main.h  obex_object.c  obex_object.h  obex_server.c  obex_server.h  obex_transport.c  obex_transport.h  openobex.rc.in  usbobex.c  usbobex.h  win32compat.c
sdkrelease_1_1/sources/chess/: CMakeLists.txt
(+3595 files in other folders)
